# C-LuaJIT-binding-example

./: CMakeLists.txt  README.md
src/: main.c
src/math/: mathtest.c  mathtest.h
